--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
+		"@sveltejs/adapter-node": "^5.2.4",
+		"@sveltejs/adapter-static": "^3.0.5",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"prettier": "^3.1.1",
@@ -20,7 +22,10 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@rollup/plugin-dsv": "^3.0.5",
+		"autoprefixer": "^10.4.20",
 		"d3": "^7.9.0",
+		"svelte-preprocess": "^6.0.2",
 		"swiper": "^11.1.14"
 	}
 }
