--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"private": true,
 	"scripts": {
 		"dev": "vite dev",
-		"build": "vite build",
+		"build": "vite build && cat build/index.html | clip",
 		"preview": "vite preview",
 		"lint": "prettier --check .",
 		"format": "prettier --write ."
@@ -24,7 +24,10 @@
 	"dependencies": {
 		"@rollup/plugin-dsv": "^3.0.5",
 		"autoprefixer": "^10.4.20",
+		"cat": "^0.2.0",
+		"clipboardy": "^4.0.0",
 		"d3": "^7.9.0",
+		"pbcopy": "^0.0.1",
 		"svelte-preprocess": "^6.0.2",
 		"swiper": "^11.1.14"
 	}
